Add details to notebook

--- a/CM01/Disease.ipynb
+++ b/CM01/Disease.ipynb
@@ -23,7 +23,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This notebook examines the effect that changing the prior, sensitivity, and specificity have on the posterior result of a disease test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we create functions to generate and plot data with the variable in question ranging from 1-100% while the remaining two stay constant."
+   ]
   },
   {
    "cell_type": "code",
@@ -98,6 +107,13 @@
     "    ax.set_xlabel('Specificity', fontsize=16)\n",
     "    ax.set_ylabel('Posterior', fontsize=16)\n",
     "    ax.set_title('P(D|T) with variable specificity', fontsize=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we call these functions to plot results from each condition on the same axes. The results of both prior and sensitivity variation are linear, though prior is much stronger; specificity has an exponential effect, much stronger initially and tapering off."
    ]
   },
   {
