Updated doc for FFI model

--- a/CM02/FFI.ipynb
+++ b/CM02/FFI.ipynb
@@ -29,17 +29,18 @@
     "$$\n",
     "\n",
     "where\n",
-    "1) $\\mathrm{d}X_i$ -- infinitesimal change in activation of the $i$-th accumulator;\n",
-    "2) $v_i$ -- drift rate of the $i$-th accumulator;\n",
-    "3) $I_f(i)$ -- feed-forward term for the $i$-th accumulator;\n",
-    "4) $\\mathrm{d}t$ -- time step;\n",
-    "5) $\\sigma$ -- variance for the diffusion coefficient;\n",
-    "6) "
+    "- $\\mathrm{d}X_i$ -- infinitesimal change in activation of the $i$-th accumulator;\n",
+    "- $v_i$ -- drift rate of the $i$-th accumulator;\n",
+    "- $I_f(i)$ -- inhibition term for the $i$-th accumulator;\n",
+    "- $\\mathrm{d}t$ -- time step;\n",
+    "- $\\sigma$ -- variance for the diffusion coefficient;\n",
+    "- $\\mathrm{d}W_t$ -- infinitesimal Gaussian random increment;\n",
+    "- $\\alpha \\in \\mathbb{R}_+$ -- strength of feedforward inhibition. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,10 +57,8 @@
     "        The starting points\n",
     "    a     : float\n",
     "        The boundary separation (decision threshold).\n",
-    "    beta  : float in [0, inf+)\n",
+    "    alpha : float in [0, inf+)\n",
     "        Inhibition parameter\n",
-    "    kappa : float in [0, 1]\n",
-    "        Leakage parameter\n",
     "    tau   : float [0 , inf+)\n",
     "        Non-decision time (additive constant)\n",
     "    dt    : float, optional (default: 1e-3 = 0.001)\n",
