Uploaded first version of Problem 6

--- a/CM02/DDM_Estimation.ipynb
+++ b/CM02/DDM_Estimation.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_232912/4183133011.py:2: DeprecationWarning: \n",
+      "/tmp/ipykernel_233362/814380861.py:2: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -39,12 +39,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rt</th>\n",
+       "      <th>choice</th>\n",
+       "      <th>condition</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.477</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.600</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.416</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.435</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rt  choice  condition\n",
+       "0  0.477     1.0        1.0\n",
+       "1  0.600     1.0        1.0\n",
+       "2  0.500     0.0        1.0\n",
+       "3  0.416     1.0        1.0\n",
+       "4  0.435     1.0        1.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the data\n",
+    "data = pd.read_csv(\"./data/sample_response_time.csv\", delimiter=\";\")\n",
+    "data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the data\n"
+    "# Load the model\n",
+    "ddm = open(\"./models/diffusion_model.stan\", \"r\").read()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data {\n",
+      "    int<lower=1> N;\n",
+      "    array[N] real<lower=0> y;\n",
+      "    array[N] int<lower=1, upper=2> condition;\n",
+      "    array[N] int<lower=0, upper=1> choice;\n",
+      "}\n",
+      "\n",
+      "parameters {\n",
+      "    // Your code here\n",
+      "}\n",
+      "\n",
+      "model {\n",
+      "    // Priors\n",
+      "    // Your code here\n",
+      "\n",
+      "    // Likelihood\n",
+      "    for (n in 1:N) {\n",
+      "        // Condition 1\n",
+      "        if (condition[n] == 1) {\n",
+      "            if (choice[n] == 1) {\n",
+      "                 // Your code here\n",
+      "            }\n",
+      "            else {\n",
+      "                 // Your code here\n",
+      "            }\n",
+      "        }\n",
+      "        // Condition 2\n",
+      "        if (condition[n] == 2) {\n",
+      "            if (choice[n] == 1) {\n",
+      "                // Your code here\n",
+      "            }\n",
+      "            else {\n",
+      "                 // Your code here\n",
+      "            }\n",
+      "        }\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ddm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
