--- a/FinalProject/exploration/data_exploration.ipynb
+++ b/FinalProject/exploration/data_exploration.ipynb
@@ -4,27 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_177890/741550169.py:2: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -249,6 +233,32 @@
    "source": [
     "data = pd.read_csv('../data/subject1_1.csv', delimiter=\";\")\n",
     "data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List of parameters and their meanings\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& \\text {Table 1. Description of model parameters}\\\\\n",
+    "&\\begin{array}{lcl}\n",
+    "\\hline \n",
+    "\\text {Parameter names} & \\text {Description} \\\\\n",
+    "\\hline \n",
+    "\\texttt{Timestamp} & \\text{$\\lambda$}  \\\\\n",
+    "\\texttt{Position.x./y./z.} & \\text{$\\mu$}  \\\\\n",
+    "\\texttt{Orientation.x./y./z.} & \\text{$L$}  \\\\\n",
+    "\\texttt{Collision\\_Target} & \\text{$I_0$} \\\\\n",
+    "\\texttt{Path\\_Deviation} & \\text{$\\psi$} \\\\\n",
+    "\\texttt{gaze\\_point\\_3d\\_y} & \\text{gaze\\_point\\_3d\\_y} \\\\\n",
+    "\\texttt{gaze\\_point\\_3d\\_y} & \\text{gaze\\_point\\_3d\\_y} \\\\\n",
+    "\\hline\n",
+    "\\end{array}\n",
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
