Added notebooks for CM03

--- a/CM03/Aphasia_MPT.ipynb
+++ b/CM03/Aphasia_MPT.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Complex Multinomial Processing Tree (MPT) Model for Aphasia"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
