Updated Notebook for Problem 3 in CM03

--- a/CM03/Aphasia_MPT.ipynb
+++ b/CM03/Aphasia_MPT.ipynb
@@ -26,6 +26,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters and Model\n",
+    "\n",
+    "The model is depicted in the following figure:\n",
+    "\n",
+    "<img src=\"./assets/aphasia.png\" width=80% height=80% />\n",
+    "\n",
+    "\n",
+    "The table below lists the four latent parameters and corresponding interpretations:\n",
+    "\n",
+    "\n",
+    "| Parameter | Description | \n",
+    "| --- | --- |\n",
+    "| $a$ | Probability of initiating an attempt |\n",
+    "| $t$ | Probability of selecting a target word from a pool of candidates |\n",
+    "| $f$ | Probability of retrieving correct phonemes |\n",
+    "| $c$ | Probability of a phoneme change in the target word |\n",
+    "\n",
+    "The table below lists the five types of responses (categories):\n",
+    "\n",
+    "\n",
+    "| Response (Category) | Description | Example | \n",
+    "| --- | --- | --- |\n",
+    "| Correct | The response matches the target image. | cat |\n",
+    "| Neologism | The response is not a word, but it has a phonological relation to the target image. | cag |\n",
+    "| Formal | The response is a word with only a phonological relation to the target image. | hat |\n",
+    "| Mixed | The response is a word with both a semantic and phonological relation the target image. | rat |\n",
+    "| Other | All other responses, including omissions, descriptions, non-nouns, etc. | - |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
