Implemented full model for Problem 03

--- a/CM03/Aphasia_MPT.ipynb
+++ b/CM03/Aphasia_MPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,29 @@
     "\n",
     "The model is depicted in the following figure:\n",
     "\n",
-    "<img src=\"./assets/aphasia.png\" width=80% height=80% />\n",
-    "\n",
-    "\n",
+    "<img src=\"./assets/aphasia.png\" width=80% height=80% />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align}\n",
+    "    \\mathrm{NR} &= 1-a, \\\\\n",
+    "    \\mathrm{AN} &= a(1-bc)(1-f)(1-h), \\\\\n",
+    "    \\mathrm{U} &= a[(1-b)f + (1-bc)(1-f)h], \\\\\n",
+    "    \\mathrm{S} &= ab(1-c)f, \\\\\n",
+    "    \\mathrm{F} &= abc[(1-d)f + (1-def)(1-f)g], \\\\\n",
+    "    \\mathrm{N} &= abc(1-f)(1-g), \\\\\n",
+    "    \\mathrm{M} &= abcd(1-e)f, \\\\\n",
+    "    \\mathrm{C} &= abcdef.\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The table below lists the four latent parameters and corresponding interpretations:\n",
     "\n",
     "\n",
@@ -56,6 +76,63 @@
     "| Formal | The response is a word with only a phonological relation to the target image. | hat |\n",
     "| Mixed | The response is a word with both a semantic and phonological relation the target image. | rat |\n",
     "| Other | All other responses, including omissions, descriptions, non-nouns, etc. | - |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_mpt_code = \"\"\"\n",
+    "data {\n",
+    "  int<lower=1> N; // Number of trials\n",
+    "  int<lower=1> K; // Number of categories\n",
+    "  array[K] int<lower=0, upper=N> freqs;\n",
+    "}\n",
+    "\n",
+    "parameters {\n",
+    "  real<lower=0, upper=1> a;\n",
+    "  real<lower=0, upper=1> b;\n",
+    "  real<lower=0, upper=1> c;\n",
+    "  real<lower=0, upper=1> d;\n",
+    "  real<lower=0, upper=1> e;\n",
+    "  real<lower=0, upper=1> f;\n",
+    "  real<lower=0, upper=1> g;\n",
+    "  real<lower=0, upper=1> h;\n",
+    "}\n",
+    "\n",
+    "transformed parameters {\n",
+    "  simplex[K] theta;\n",
+    "  theta[1] = 1-a;\n",
+    "  theta[2] = a * (1 - b * c) * (1 - f) * (1 - h);\n",
+    "  theta[3] = a * ((1 - b) * f + (1 - b * c) * (1 - f) * h);\n",
+    "  theta[4] = a * b * (1 - c) * f;\n",
+    "  theta[5] = a * b * c * ((1 - d) * f + (1 - d * e * f) * (1 - f) * g);\n",
+    "  theta[6] = a * b * c * (1 - f) * (1 - g);\n",
+    "  theta[7] = a * b * c * d * (1 - e) * f;\n",
+    "  theta[8] = a * b * c * d * e * f;\n",
+    "}\n",
+    "\n",
+    "model {\n",
+    "  a ~ beta(2, 2);\n",
+    "  b ~ beta(2, 2);\n",
+    "  c ~ beta(2, 2);\n",
+    "  d ~ beta(2, 2);\n",
+    "  e ~ beta(2, 2);\n",
+    "  f ~ beta(2, 2);\n",
+    "  g ~ beta(2, 2);\n",
+    "  h ~ beta(2, 2);\n",
+    "\n",
+    "  target += dirichlet_lpdf(theta | rep_vector(1, K));\n",
+    "  target += multinomial_lpmf(freqs | theta);\n",
+    "}\n",
+    "\n",
+    "generated quantities {\n",
+    "  // Predictions of frequencies go here\n",
+    "  array[K] int preds = multinomial_rng(theta, N);\n",
+    "}\n",
+    "\"\"\""
    ]
   },
   {
