Updated notebook for Problem 3 in CM03

--- a/CM03/Aphasia_MPT.ipynb
+++ b/CM03/Aphasia_MPT.ipynb
@@ -19,6 +19,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a global random number generator\n",
+    "RNG = np.random.default_rng()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,25 +72,32 @@
     "| Parameter | Description | \n",
     "| --- | --- |\n",
     "| $a$ | Probability of initiating an attempt |\n",
-    "| $t$ | Probability of selecting a target word from a pool of candidates |\n",
+    "| $b$ | Probability of identifying the correct semantic neighborhood of the picture |\n",
+    "| $c$ | Probability of retrieving correct lexical-semantic information |\n",
+    "| $d$ | Probability of retrieving correct lexical-phonological information |\n",
+    "| $e$ | Probability of selecting a target lexeme over competitors |\n",
     "| $f$ | Probability of retrieving correct phonemes |\n",
-    "| $c$ | Probability of a phoneme change in the target word |\n",
+    "| $g$ | Probability of selecting a target word from a pool of candidates |\n",
+    "| $h$ | Probability of a phoneme change in a random word creating a real word |\n",
     "\n",
     "The table below lists the five types of responses (categories):\n",
     "\n",
     "\n",
     "| Response (Category) | Description | Example | \n",
     "| --- | --- | --- |\n",
-    "| Correct | The response matches the target image. | cat |\n",
-    "| Neologism | The response is not a word, but it has a phonological relation to the target image. | cag |\n",
-    "| Formal | The response is a word with only a phonological relation to the target image. | hat |\n",
-    "| Mixed | The response is a word with both a semantic and phonological relation the target image. | rat |\n",
-    "| Other | All other responses, including omissions, descriptions, non-nouns, etc. | - |"
+    "| Correct (C) | The response matches the target image. | cat |\n",
+    "| Semantic (S) | The response is a word with only a semantic relation to the target | dog |\n",
+    "| Formal (F) | The response is a word with only a phonological relation to the target image. | hat |\n",
+    "| Mixed (M) | The response is a word with both a semantic and phonological relation the target image. | rat |\n",
+    "| Unrelated (U) | The response is a word with neither a semantic nor a phonological relation to the target. | fog |\n",
+    "| Neologism (N) | The response is not a word, but it has a phonological relation to the target image. | cag |\n",
+    "| Abstruse Neologism (AN) | The response is not a word, nor does it have a phonological relation to the target. | rog |\n",
+    "| Other (NR) | All other responses, including omissions, descriptions, non-nouns, etc. | - |"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +121,7 @@
     "\n",
     "transformed parameters {\n",
     "  simplex[K] theta;\n",
-    "  theta[1] = 1-a;\n",
+    "  theta[1] = 1 - a;\n",
     "  theta[2] = a * (1 - b * c) * (1 - f) * (1 - h);\n",
     "  theta[3] = a * ((1 - b) * f + (1 - b * c) * (1 - f) * h);\n",
     "  theta[4] = a * b * (1 - c) * f;\n",
@@ -133,6 +150,35 @@
     "  array[K] int preds = multinomial_rng(theta, N);\n",
     "}\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the simulator\n",
+    "def aphasia_simulator(theta, num_trials=120, rng=None):\n",
+    "\n",
+    "    if rng is None:\n",
+    "        rng = np.random.default_rng()\n",
+    "\n",
+    "\n",
+    "    a, b, c, d, e, f, g, h = theta\n",
+    "\n",
+    "    true_probs = {\n",
+    "        \"other\": 1 - a,\n",
+    "        \"abstruse\": a * (1 - b * c) * (1 - f) * (1 - h),\n",
+    "        \"unrelated\": a * ((1 - b) * f + (1 - b * c) * (1 - f) * h),\n",
+    "        \"semantic\": a * b * (1 - c) * f,\n",
+    "        \"formal\": a * b * c * ((1 - d) * f + (1 - d * e * f) * (1 - f) * g),\n",
+    "        \"neologism\": a * b * c * (1 - f) * (1 - g),\n",
+    "        \"mixed\": a * b * c * d * (1 - e) * f,\n",
+    "        \"correct\": a * b * c * d * e * f\n",
+    "    }\n",
+    "\n",
+    "    return rng.multinomial(n=num_trials, pvals=list(true_probs.values()))"
    ]
   },
   {
@@ -190,6 +236,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([135,  11,  38,  50,   2,   1,   1,   2])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ground truth parameters\n",
+    "a = 0.44\n",
+    "b = 0.58\n",
+    "c = 0.1\n",
+    "d = 0.69\n",
+    "e = 0.73\n",
+    "f = 0.86\n",
+    "g = 0.57\n",
+    "h = 0.36\n",
+    "\n",
+    "theta = np.array([a, b, c, d, e, f, g, h])\n",
+    "theta\n",
+    "\n",
+    "# Number of trials\n",
+    "n_trials = 240\n",
+    "data = aphasia_simulator(theta, n_trials, RNG)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -216,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -231,53 +313,54 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Building: 26.0s, done."
+      "Building: found in cache, done."
      ]
     }
    ],
    "source": [
     "mpt_dict = {\n",
     "    'freqs': data,\n",
-    "    'N': num_trials,\n",
+    "    'N': n_trials,\n",
     "    'K': data.shape[0]\n",
     "}\n",
     "\n",
-    "mpt_posterior = stan.build(program_code=mpt_model_code, data=mpt_dict, random_seed=2069)"
+    "full_mpt_posterior = stan.build(program_code=full_mpt_code, data=mpt_dict, random_seed=2069)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling:   0%\n",
-      "Sampling:  25% (3500/14000)\n",
-      "Sampling:  50% (7000/14000)\n",
-      "Sampling:  75% (10500/14000)\n",
-      "Sampling: 100% (14000/14000)\n",
-      "Sampling: 100% (14000/14000), done.\n",
-      "Messages received during sampling:\n",
-      "  Gradient evaluation took 2.1e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.21 seconds.\n",
-      "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 2.1e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.21 seconds.\n",
-      "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 2.4e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.24 seconds.\n",
-      "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 3e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.3 seconds.\n",
-      "  Adjust your expectations accordingly!\n"
+      "Sampling:   0%"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Exception during call to services function: `RuntimeError(\"Initialization between (-2, 2) failed after 100 attempts. Try specifying initial values, reducing ranges of constrained values, or reparameterizing the model. Initialization failed. Rejecting initial value: Error evaluating the log probability at the initial value. Exception: model_43kwhwx4_namespace::log_prob: theta is not a valid simplex. sum(theta) = 0.9989044276, but should be 1 (in '/tmp/httpstan_u7279uzc/model_43kwhwx4.stan', line 20, column 2 to column 19) Rejecting initial value:\")`, traceback: `['  File \"/usr/lib/python3.10/asyncio/tasks.py\", line 232, in __step\\n    result = coro.send(None)\\n', '  File \"/home/geraldwong/.local/lib/python3.10/site-packages/httpstan/services_stub.py\", line 182, in call\\n    raise RuntimeError(exception_message)\\n']`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fit \u001b[38;5;241m=\u001b[39m \u001b[43mfull_mpt_posterior\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_chains\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_samples\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2500\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_warmup\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/stan/model.py:89\u001b[0m, in \u001b[0;36mModel.sample\u001b[0;34m(self, num_chains, **kwargs)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msample\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m, num_chains\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m stan\u001b[38;5;241m.\u001b[39mfit\u001b[38;5;241m.\u001b[39mFit:\n\u001b[1;32m     62\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Draw samples from the model.\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \n\u001b[1;32m     64\u001b[0m \u001b[38;5;124;03m    Parameters in ``kwargs`` will be passed to the default sample function.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     87\u001b[0m \n\u001b[1;32m     88\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 89\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhmc_nuts_diag_e_adapt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_chains\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_chains\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/stan/model.py:108\u001b[0m, in \u001b[0;36mModel.hmc_nuts_diag_e_adapt\u001b[0;34m(self, num_chains, **kwargs)\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Draw samples from the model using ``stan::services::sample::hmc_nuts_diag_e_adapt``.\u001b[39;00m\n\u001b[1;32m     93\u001b[0m \n\u001b[1;32m     94\u001b[0m \u001b[38;5;124;03mParameters in ``kwargs`` will be passed to the (Python wrapper of)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    105\u001b[0m \n\u001b[1;32m    106\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    107\u001b[0m function \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstan::services::sample::hmc_nuts_diag_e_adapt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 108\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_create_fit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunction\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfunction\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_chains\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_chains\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/stan/model.py:313\u001b[0m, in \u001b[0;36mModel._create_fit\u001b[0;34m(self, function, num_chains, **kwargs)\u001b[0m\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fit\n\u001b[1;32m    312\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 313\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43masyncio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    314\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m    315\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/nest_asyncio.py:30\u001b[0m, in \u001b[0;36m_patch_asyncio.<locals>.run\u001b[0;34m(main, debug)\u001b[0m\n\u001b[1;32m     28\u001b[0m task \u001b[38;5;241m=\u001b[39m asyncio\u001b[38;5;241m.\u001b[39mensure_future(main)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 30\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mloop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_until_complete\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m task\u001b[38;5;241m.\u001b[39mdone():\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/nest_asyncio.py:98\u001b[0m, in \u001b[0;36m_patch_loop.<locals>.run_until_complete\u001b[0;34m(self, future)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m f\u001b[38;5;241m.\u001b[39mdone():\n\u001b[1;32m     96\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m     97\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEvent loop stopped before Future completed.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 98\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/lib/python3.10/asyncio/futures.py:201\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__log_traceback \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    200\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 201\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\u001b[38;5;241m.\u001b[39mwith_traceback(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception_tb)\n\u001b[1;32m    202\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_result\n",
+      "File \u001b[0;32m/usr/lib/python3.10/asyncio/tasks.py:232\u001b[0m, in \u001b[0;36mTask.__step\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    229\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m exc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    230\u001b[0m         \u001b[38;5;66;03m# We use the `send` method directly, because coroutines\u001b[39;00m\n\u001b[1;32m    231\u001b[0m         \u001b[38;5;66;03m# don't have `__iter__` and `__next__` methods.\u001b[39;00m\n\u001b[0;32m--> 232\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[43mcoro\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    233\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    234\u001b[0m         result \u001b[38;5;241m=\u001b[39m coro\u001b[38;5;241m.\u001b[39mthrow(exc)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/stan/model.py:236\u001b[0m, in \u001b[0;36mModel._create_fit.<locals>.go\u001b[0;34m()\u001b[0m\n\u001b[1;32m    234\u001b[0m         sampling_output\u001b[38;5;241m.\u001b[39mwrite_line(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m<info>Sampling:</info> <error>Initialization failed.</error>\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    235\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInitialization failed.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 236\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(message)\n\u001b[1;32m    238\u001b[0m resp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m client\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfit_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mstatus \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Exception during call to services function: `RuntimeError(\"Initialization between (-2, 2) failed after 100 attempts. Try specifying initial values, reducing ranges of constrained values, or reparameterizing the model. Initialization failed. Rejecting initial value: Error evaluating the log probability at the initial value. Exception: model_43kwhwx4_namespace::log_prob: theta is not a valid simplex. sum(theta) = 0.9989044276, but should be 1 (in '/tmp/httpstan_u7279uzc/model_43kwhwx4.stan', line 20, column 2 to column 19) Rejecting initial value:\")`, traceback: `['  File \"/usr/lib/python3.10/asyncio/tasks.py\", line 232, in __step\\n    result = coro.send(None)\\n', '  File \"/home/geraldwong/.local/lib/python3.10/site-packages/httpstan/services_stub.py\", line 182, in call\\n    raise RuntimeError(exception_message)\\n']`"
      ]
     }
    ],
    "source": [
-    "fit = mpt_posterior.sample(num_chains=4, num_samples=2500, num_warmup=1000)"
+    "fit = full_mpt_posterior.sample(num_chains=4, num_samples=2500, num_warmup=1000)"
    ]
   },
   {
@@ -575,7 +658,7 @@
    ],
    "source": [
     "# Convergence\n",
-    "az.plot_trace(fit)"
+    "az.plot_trace(fit)\n"
    ]
   },
   {
